fix: scrollbar on catalog categories

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,5 @@
 @import "tailwindcss";
 @import "tw-animate-css";
-@import "tailwind-scrollbar-hide/v4";
 
 :root {
   --radius: 0.65rem;
@@ -117,6 +116,26 @@ html::-webkit-scrollbar-thumb:hover {
   background-color: #33e070;
 }
 
+.catalog-scrollbar::-webkit-scrollbar {
+  height: 12px !important;
+}
+
+.catalog-scrollbar::-webkit-scrollbar-track {
+  background: #030904 !important;
+  border: 1px solid #1c211d !important;
+  border-radius: 9999px !important;
+}
+
+.catalog-scrollbar::-webkit-scrollbar-thumb {
+  background: linear-gradient(to right, #3dff88 0%, #259951 100%) !important;
+  border-radius: 9999px !important;
+  border: 1.5px solid rgba(22, 166, 41, 0.8) !important;
+}
+
+.catalog-scrollbar::-webkit-scrollbar-thumb:hover {
+  background-color: #33e070 !important;
+}
+
 .no-spin::-webkit-inner-spin-button,
 .no-spin::-webkit-outer-spin-button {
   -webkit-appearance: none;
@@ -139,12 +158,6 @@ html::-webkit-scrollbar-thumb:hover {
   input[type="number"]::-webkit-outer-spin-button {
     -webkit-appearance: none;
     margin: 0;
-  }
-
-  [type="search"]::-webkit-search-cancel-button,
-  [type="search"]::-webkit-search-decoration {
-    -webkit-appearance: none;
-    appearance: none;
   }
 }
 
